# eddc

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
eddc.egg-info/: PKG-INFO  SOURCES.txt
hdd_cdd_calculator/: __init__.py  __main__.py  csv_utils.py  data_sources.py  meteostat_api.py
hdd_cdd_calculator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
