[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eddc"
version = "0.1.5"
description = "A Python library for calculating Heating Degree Days (HDD) and Cooling Degree Days (CDD) from the U.S. NWS API and Open-Meteo, with regression and visualization tools."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Ryan Kmetz", email = "consultrmk@gmail.com" }
]
keywords = [
    "HDD", "CDD", "degree-days", "weather", "climate",
    "energy", "NWS", "Open-Meteo", "regression", "visualization"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "requests>=2.28",
    "pandas>=1.3",
    "python-dateutil>=2.8",
    "scikit-learn>=1.0",
    "matplotlib>=3.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0"
]
viz = [
    "matplotlib>=3.5"
]
tests = [
    "pytest>=7.0"
]

[project.urls]
"Source" = "https://github.com/rmkenv/eddc"
"Tracker" = "https://github.com/rmkenv/eddc/issues"

[tool.setuptools]
packages = ["hdd_cdd_calculator"]

[tool.pytest.ini_options]
testpaths = ["hdd_cdd/tests"]
